crates/analyzer/tests/snapshots/errors__trait_not_in_scope.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)
---
error: No method named `do` found for type `u256` in the current scope
  ┌─ compile_errors/trait_not_in_scope/src/main.fe:4:7
  │
4 │     1.do()
  │       ^^ method not found in `u256`
  │
  ┌─ compile_errors/trait_not_in_scope/src/foo.fe:7:6
  │
7 │   fn do(self) {
  │      -- the method is available for `u256` here
  │
  = Hint: items from traits can only be used if the trait is in scope
  = Hint: the following trait is implemented but not in scope; perhaps add a `use` for it: `trait DoThing`


